--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,3 @@
-/****** Main Styling ******/
-
 body {
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
@@ -49,7 +47,7 @@ li {
 }
 
 a {
-	color: #2574A9;
+	color: #A95A25;
 }
 
 form {
